tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_missing_unsafe_block_when_needing_type_annotations/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Call to unconstrained function is unsafe and must be in an unconstrained function or unsafe block
   ┌─ src/main.nr:27:13
   │
27 │             self.__is_zero_impl()
   │             -------------------
   │

Aborting due to 1 previous error
