tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_missing_unsafe_block_when_needing_type_annotations/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Call to unconstrained function is unsafe and must be in an unconstrained function or unsafe block
   ┌─ src/main.nr:27:13
   │
27 │             self.__is_zero_impl()
   │             -------------------
   │

Aborting due to 1 previous error
